--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,18 @@ services:
   server:
     build: 
       context: .
-      dockerfile: ./Dockerfile-build
-    command: sh -c "npm install && npm test"
+      dockerfile: ./Dockerfile.build
+    command: sh -c "npm install"
     environment:
       - NODE_ENV=production
       - PORT=3000
     ports:
       - '3000:3000'
     working_dir: /usr/src/app
-    # volumes:
-    #   - ./:/usr/src/app
-    depends_on:
+    links:
       - redis
   
   redis: 
     image: redis
-    # ports: 
-    #   - '6379:6379'
+    expose:
+      - 6379
