--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "dev": "nodemon",
     "build": "rm -rf ./build && tsc",
-    "start": "npm run build && node build/index.js",
+    "start": "npm run build && node build/server.js",
     "test": "jest",
     "data": "ts-node ./tests/makeData.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "lru-cache": "^5.1.1",
     "redis": "^3.0.2"
@@ -23,8 +24,10 @@
     "@types/lru-cache": "^5.1.0",
     "@types/node": "^13.11.1",
     "@types/redis": "^2.8.17",
+    "@types/supertest": "^2.0.8",
     "jest": "^25.3.0",
     "nodemon": "^2.0.3",
+    "supertest": "^4.0.2",
     "ts-jest": "^25.3.1",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
