--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
     command: sh -c "npm install"
     environment:
       - NODE_ENV=production
-      - PORT=3000
+    env_file:
+      - .env
     ports:
       - '3000:3000'
     working_dir: /usr/src/app
