update variables, defaults

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,7 +10,7 @@ services:
       - .env
     command: sh -c "npm install && npm run dev"
     ports:
-      - '3000:3000'
+      - '${PORT}:${PORT}'
     working_dir: /usr/src/app
     volumes:
       - ./:/usr/src/app
@@ -21,3 +21,4 @@ services:
     image: redis
     expose:
       - 6379
+    command: ["redis-server", "--bind", "redis", "--port", "${REDIS_PORT}"]
