--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -3,7 +3,7 @@ services:
   server:
     build: 
       context: .
-      dockerfile: ./Dockerfile.dev
+      dockerfile: ./Dockerfile.test
     environment:
       - NODE_ENV=development
     env_file:
@@ -12,8 +12,8 @@ services:
     ports:
       - '${PORT}:${PORT}'
     working_dir: /usr/src/app
-    volumes:
-      - ./:/usr/src/app
+    # volumes:
+    #   - ./:/usr/src/app
     links:
       - redis
   
